[tool.poetry]
name = "pxbuild"
version = "0.1.0"
description = "Tool for building px-files"
authors = ["Team Nettop"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^17.0.0"
pandas = "^2.2.2"
pydantic = "^2.9.1"
pre-commit = "^3.8.0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"
coverage = {extras = ["toml"], version = "^7.6.1"}
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
pep8-naming = "^0.14.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
