[tool.poetry]
name = "pxbuild"
version = "0.1.0"
description = "Tool for building px-files"
authors = ["Team Nettop"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^18.1.0"
pandas = "^2.2.3"
pydantic = "^2.10.2"
pre-commit = "^4.0.1"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"
coverage = {extras = ["toml"], version = "^7.6.8"}
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.10.31"
pep8-naming = "^0.14.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
