[tool.poetry]
name = "pxbuild"
version = "0.1.0"
description = "Tool for building px-files"
authors = ["Team Nettop"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^18.0.0"
pandas = "^2.2.3"
pydantic = "^2.11.3"
pre-commit = "^4.2.0"
jinja2 = "^3.1.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.5"
coverage = {extras = ["toml"], version = "^7.8.0"}
pytest-cov = "^6.1.1"
flake8 = "^7.2.0"
flake8-bugbear = "^24.12.12"
pep8-naming = "^0.14.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
